# Putting dev-only dependencies in the top-level BUILD file
# would break downstream dependers.

load("@buildtools//:rules.bzl", "buildifier")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

# To format all Bazel files, run `bazel run //dev:buildifier`.
buildifier(
    name = "buildifier",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "fix",
    mode = "fix",
)

# Update Bzlmod dependencies in `MODULE.bazel`:
sh_binary(
    name = "upgrade-dependencies",
    srcs = ["dependencies-upgrade.sh"],
    args = ["$(execpath @buildtools//:buildozer)"],
    data = ["@buildtools//:buildozer"],
)
