load("//:private.bzl", "format_platform")

alias(
    name = "tinygo",
    actual = format_platform("@tinygo-{}//:tinygo"),
)

sh_binary(
    name = "tinygo-runner",
    srcs = ["tinygo-runner.sh"],
)

alias(
    name = "wit-bindgen-go",
    actual = format_platform("@wit-bindgen-go-{}//:wit-bindgen-go"),
)

sh_binary(
    name = "wit-bindgen-go-runner",
    srcs = ["wit-bindgen-go-runner.sh"],
)
