load("//wasm:defs.bzl", "wasi_packages", "wit_package")

# Declare a WIT package for each WASI package ("cli", "http", etc.).
[wit_package(
    name = name,
    srcs = ["@wasi//:{}".format(name)],
    package = "wasi:{}".format(name),
    visibility = ["//visibility:public"],
    deps = [":" + dep for dep in deps],
) for name, deps in wasi_packages.items()]
