load("@rules_wasm//c:defs.bzl", "c_component")
load("@rules_wasm//wasm:defs.bzl", "wasm_plug")
load("//:wasm-test.bzl", "wasm_test")

# Build a C component.
c_component(
    name = "foo-wrapper",
    srcs = ["foo-wrapper.c"],
    wit = "//:foo-wrapper-wit",
    world = "foo-command",
)

# Plug a Rust component into a C component.
wasm_plug(
    name = "foo-wrapped",
    plug = "//rust:foo",
    wrapper = ":foo-wrapper",
)

wasm_test(
    name = "wrapper-test",
    component = ":foo-wrapped",
)
